--- a/css.css
+++ b/css.css
@@ -83,13 +83,15 @@ header{
     font-size: 1.5rem;
     text-align: center;
 }
-nav{
+nav a{
+color: var(--title-color);
+}
+nav {
     position: relative;
     padding: 1rem;
-    z-index: 20;
     display: flex;
     justify-content: space-between;
-    color: var(--title-color);
+    
 }
 .nav-close,.nav-toggle{
     display: none;
